Fix header alignment

--- a/static/style.css
+++ b/static/style.css
@@ -1,13 +1,10 @@
 div.header {
-    /* display: block;
-    max-width: 800px;
-    width: 90%; */
     margin: 4em auto;
     display: flex;
-    max-width: 800px;
     width: 90%;
     flex-direction: row;
     align-items: center;
+    justify-content: space-evenly;
 
 }
 
